--- a/Client/index.html
+++ b/Client/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="min-h-screen flex flex-col justify-between bg-gray-800"></div>
+    <div id="root" class="min-h-screen select-none flex flex-col justify-between bg-gray-800"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
