--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="scrollbar-main">
+  <body class="scrollbar-main break-all">
     <div id="root" class="min-h-screen select-none flex flex-col justify-between bg-gray-800"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
