--- a/Client/index.html
+++ b/Client/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body class="scrollbar-main break-all">
+</head>
+<body class="scrollbar-main break-all">
     <div id="root" class="min-h-screen select-none flex flex-col justify-between bg-gray-800"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
